<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/purple_500"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginText"
        android:textSize="36sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/app_theme"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/username"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="@string/username"
        android:padding="8dp"
        android:textColor="@color/black_shade_1"
        android:textColorHighlight="@color/black_shade_2"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/password"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:padding="8dp"
        android:inputType="textPassword"
        android:textColor="@color/black_shade_1"
        android:textColorHighlight="@color/black_shade_2"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/loginButton"
        android:text="@string/login"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/app_theme"
        app:cornerRadius = "20dp"/>

        <TextView
            android:id="@+id/signupText"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="8dp"
            android:text="@string/sign_up_text"
            android:textAlignment="center"
            android:textColor="@color/dark_blue_shade"
            android:textSize="14sp" />

    </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>