<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".Watchlist">

    <androidx.cardview.widget.CardView
        android:id="@+id/idCVWatchlist"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:background="@drawable/custom_edittext"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="20dp">

        <TextView
            android:id="@+id/watchlistText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/watchlist"
            android:textAlignment="center"
            android:textColor="@color/app_theme"
            android:textSize="36sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <!--edit text for searching our currency-->
    <EditText
        android:id="@+id/idEdtCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idCVWatchlist"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:focusable="auto"
        android:hint="@string/search_commodity"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black_shade_1"
        android:textColorHint="@color/black_shade_1" />

    <!--recycler view for displaying the list of currencies-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRVcurrency"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/idEdtCurrency"
        tools:listitem="@layout/watchlist_rv_item" />

    <!--progress bar for loading indicator-->
    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/Watchlist"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-8dp"
        android:backgroundTint="@color/app_theme"
        android:text="@string/watchlist"
        android:textColor="@color/dark_blue_shade"
        android:textColorHint="@color/dark_blue_shade" />

    <Button
        android:id="@+id/Orders"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="-8dp"
        android:layout_toEndOf="@id/Watchlist"
        android:backgroundTint="@color/app_theme"
        android:text="@string/orders"
        android:textColor="@color/dark_blue_shade"
        android:textColorHint="@color/dark_blue_shade" />

    <Button
        android:id="@+id/Portfolio"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="-8dp"
        android:layout_toEndOf="@id/Orders"
        android:backgroundTint="@color/app_theme"
        android:text="@string/portfolio"
        android:textColor="@color/dark_blue_shade"
        android:textColorHint="@color/dark_blue_shade" />

    <Button
        android:id="@+id/Profile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="-8dp"
        android:layout_toEndOf="@id/Portfolio"
        android:backgroundTint="@color/app_theme"
        android:padding="1dp"
        android:text="@string/profile"
        android:textColor="@color/dark_blue_shade"
        android:textColorHint="@color/dark_blue_shade" />

</RelativeLayout>